[dependencies]
once_cell = '1.2.0'

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = [
  'algorithms',
  'text-processing',
]
description = "A simple text profanity filter"
documentation = 'https://docs.rs/censor'
edition = '2018'
keywords = [
  'swear',
  'profanity',
  'filter',
  'political',
]
license = 'MIT'
name = 'censor'
reademe = 'readme.md'
repository = 'https://github.com/kaikalii/censor'
version = '0.3.0'
